--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -109,26 +109,27 @@ endif(MSVC90 OR Boost_FOUND)
 
 set(ADD_INCHI_FORMAT FALSE)
 if(WITH_INCHI)
-  if (NOT MSVC)
+  if(NOT MSVC AND NOT OPENBABEL_USE_SYSTEM_INCHI)
     set(ADD_INCHI_FORMAT TRUE)
-  else (NOT MSVC)
+  else()
     if (EXISTS ${INCHI_LIBRARY})
       set(ADD_INCHI_FORMAT TRUE)
     else (EXISTS ${INCHI_LIBRARY})
       message("WARNING: INCHI_LIBRARY not set, or does not exist.\n....InChI format will NOT be compiled.")
-    endif (EXISTS ${INCHI_LIBRARY})
-  endif (NOT MSVC)
-endif(WITH_INCHI)
+    endif()
+  endif()
+endif()
 
 if(ADD_INCHI_FORMAT)
   add_definitions(-DINCHI_LINK_AS_DLL)
-  if(NOT MSVC)
+  if(NOT MSVC AND NOT OPENBABEL_USE_SYSTEM_INCHI)
     add_subdirectory(inchi103)
     include_directories(${CMAKE_SOURCE_DIR}/include/inchi103)
     set(libs ${libs} inchi)
-  else(NOT MSVC)
+  else()
+    include_directories(${INCHI_INCLUDE_DIR})
     set(libs ${libs} ${INCHI_LIBRARY})
-  endif(NOT MSVC)
+  endif()
   set(inchiformat_additional_sources getinchi.cpp ../ops/unique.cpp)
   set(formats_common
     ${formats_common}
