Correct use of elseif instead of else.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4184 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,7 +367,7 @@ add_subdirectory(tools)
 # Should we build the GUI? Default is yes on Linux or Windows, not Mac.
 if (APPLE)
 option(BUILD_GUI "Build the GUI" OFF)
-elseif (APPLE)
+else (APPLE)
 option(BUILD_GUI "Build the GUI" ON)
 endif(APPLE)
 
@@ -379,7 +379,7 @@ if(BUILD_GUI)
   else(wxWidgets_FOUND)
     message("   wxWidgets not found => GUI will not be built")
   endif(wxWidgets_FOUND)
-elseif(BUILD_GUI)
+else(BUILD_GUI)
   message("GUI will not be built")
 endif(BUILD_GUI)
 
