--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -14,10 +14,10 @@ if (RUN_SWIG)
     return()
   endif (NOT SWIG_FOUND)
   message(STATUS "SWIG version is ${SWIG_VERSION}")
-  if (NOT ${SWIG_VERSION} STREQUAL "2.0.0")
+  if (NOT ${SWIG_VERSION} STREQUAL "2.0.0" AND NOT ${SWIG_VERSION} STREQUAL "2.0.1")
     message(STATUS "SWIG version 2.0.0 exactly is required")
     return()
-  endif (NOT ${SWIG_VERSION} STREQUAL "2.0.0")
+  endif (NOT ${SWIG_VERSION} STREQUAL "2.0.0" AND NOT ${SWIG_VERSION} STREQUAL "2.0.1")
 endif (RUN_SWIG)
 
 ###################
@@ -324,10 +324,10 @@ if (CSHARP_BINDINGS)
       message(STATUS "CSHARP_EXECUTABLE NOT defined. .NET bindings will NOT be created.")
     endif (NOT CSHARP_EXECUTABLE)
 
-    if (CSHARP_LIBRARY)
+    if (CSHARP_EXECUTABLE)
       set(DO_CSHARP_BINDINGS ON BOOL)
       message(STATUS "CSharp bindings will be compiled")
-    endif (CSHARP_LIBRARY)
+    endif (CSHARP_EXECUTABLE)
 
   else (EXISTS ${openbabel_SOURCE_DIR}/scripts/csharp/openbabel-csharp.cpp OR RUN_SWIG)
     message(STATUS "Warning: Csharp bindings NOT found. Generate using -DRUN_SWIG.")
