Removed OUTPUT_DIRECTORY overrides on targets.
There were quite a few overrides of the output directory scattered around.
This is set globally for the build, and for Windows all binaries and
libraries go in the bin subdirectory of the build tree. This gets around
linking issues while keeping the build system simple.


git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4201 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -212,8 +212,7 @@ if(MSVC)
     set_target_properties(${formatgroup} PROPERTIES
                   OUTPUT_NAME ${formatgroup}
                   PREFIX ""
-                  SUFFIX ${MODULE_EXTENSION}
-                  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+                  SUFFIX ${MODULE_EXTENSION})
   endforeach(formatgroup)
 else(MSVC)
 foreach(format ${formats})
@@ -247,8 +246,7 @@ if(MSVC)
   set_target_properties(formats_xml PROPERTIES
                   OUTPUT_NAME formats_xml
                   PREFIX ""
-                  SUFFIX ${MODULE_EXTENSION}
-                  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+                  SUFFIX ${MODULE_EXTENSION})
 else(MSVC)
 foreach(format ${formats_xml})
   add_library(${format} ${PLUGIN_TYPE} xml/${format}.cpp xml/xml.cpp)
