CMake 2.4 compatibility code...
I am not sure any of the dashboards are actually testing against CMake 2.4.8,
and I spotted quite a few places where matching braces are not present. By
setting this CMake variable to true this is not necessary, and so it should
ensure the loop constructs will at least not cause warnings/failures in old
versions of CMake.


git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4202 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ endif (NOT EMBED_OPENBABEL)
 project(openbabel)
 set(CMAKE_MODULE_PATH ${openbabel_SOURCE_DIR}/cmake/modules)
 
+# Allow loose loop constructs, i.e. no matching in if/else/endif or loops.
+# Note that this is true by default in CMake 2.6.0, but we currently only
+# require CMake 2.4.8 - remove this when the CMake requirement is bumped.
+set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS 1)
+
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
   cmake_policy(SET CMP0005 OLD) # add_definitions need updating to set to NEW
