Include XML formats for static builds.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4210 71e0b675-c112-0410-beda-96664073b5c2

--- a/doc/examples/static_executable/CMakeLists.txt
+++ b/doc/examples/static_executable/CMakeLists.txt
@@ -154,6 +154,12 @@ set(format_classes
     XYZFormat
     YOBFormat
     ZINDOFormat
+    # XML formats
+    ChemDrawXMLFormat
+    CMLFormat
+    CMLReactFormat
+    PubChemFormat
+    XMLFormat
    )
 
 set(descriptor_classes
