--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -159,6 +159,14 @@ else(BUILD_SHARED)
   foreach(format ${formats})
     set(openbabel_srcs ${openbabel_srcs} formats/${format}.cpp)
   endforeach(format ${formats})
+
+  if (LIBXML2_FOUND)
+    set(openbabel_srcs ${openbabel_srcs} formats/xml/xml.cpp)
+    foreach(format ${formats_xml})
+      set(openbabel_srcs ${openbabel_srcs} formats/xml/${format}.cpp)
+    endforeach(format ${formats_xml})
+  endif(LIBXML2_FOUND)
+
   foreach(plugingroup descriptors fingerprints forcefields ops charges)
     set(openbabel_srcs ${openbabel_srcs} ${${plugingroup}})
   endforeach(plugingroup descriptors fingerprints forcefields ops charges)
